Fix compatibility problems with unityshell. unityshell hooks damageRegion and remembers the damaged areas, and in glPaintOutput it is only guaranteed to paint the regions that it saw were damaged in damageRegion. By transforming the damage in damageRegion, unityshell saw the damage in the transformed screen coordinate space instead of the FBO coordinate space, and thus it sometimes would not re-paint the right areas. The solution is to add a utility plugin that is loaded before unityshell and allows the damage transformation to happen after unityshell's damageRegion hook runs.

--- a/pixelorbiter/CMakeLists.txt
+++ b/pixelorbiter/CMakeLists.txt
@@ -2,4 +2,4 @@ find_package (Compiz REQUIRED)
 
 include (CompizPlugin)
 
-compiz_plugin (pixelorbiter PLUGINDEPS composite opengl mousepoll)
+compiz_plugin (pixelorbiter PLUGINDEPS composite opengl mousepoll transformdamage)
